# nekoclaw

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  Cargo.toml  MCP_IMPLEMENTATION.md  PROPOSAL.md  PROTOCOL.md  README.md  SKILLS_ARCHITECTURE.md  SKILLS_COMPLETION_REPORT.md  build.rs  config.toml  config.toml.template  deny.toml  run_benchmarks.sh  tarpaulin.toml
.github/workflows/: ci.yml
benches/: criterion.toml
docs/: ARCHITECTURE.md  BENCHMARK.md  MCP_CLIENT.md  MIGRATION.md  PERFORMANCE.md  QUICKSTART.md  SECURITY.md  TELEMETRY.md  USAGE.md
examples/: mcp_client_demo.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: config_parser.rs  message_parser.rs
nono/workspace/nekoclaw/: Cargo.toml
nono/workspace/nekoclaw/src/: main.rs
nono/workspace/nekoclaw/src/tools/: base64.rs  csv_parse.rs  mod.rs  (+4 more)
skills/: README.md
skills/echo/: SKILL.md
skills/echo/scripts/: echo.py
skills/weather/: SKILL.md
src/: config.rs  main.rs
src/agent/: context.rs  mod.rs  runtime.rs  session.rs
src/auth/: mod.rs
src/channels/: mod.rs
src/channels/discord/: bot.rs  commands.rs  mod.rs
src/channels/telegram/: bot.rs  commands.rs  mod.rs
src/config/: mod.rs  validator.rs
src/core/: config.rs  mod.rs  traits.rs
src/gateway/: metrics.rs  mod.rs  openai.rs  pairing.rs  server.rs  webhook.rs
src/memory/: identity_parser.rs  mod.rs  sqlite.rs  vector.rs
src/obfuscate/: mod.rs  transformer.rs
src/performance/: compress.rs  memory.rs  mod.rs  startup.rs
src/providers/: anthropic.rs  mod.rs  openai.rs  openrouter.rs
src/security/: allowlist.rs  crypto.rs  mod.rs  sandbox.rs
src/service/: mod.rs
src/skills/: loader.rs  mod.rs
src/telemetry/: dashboard.rs  metrics.rs  mod.rs  tracer.rs
src/tests/: config_tests.rs  memory_tests.rs  mod.rs  obfuscate_tests.rs  security_tests.rs
src/tools/: adapters.rs  brain.rs  filesystem.rs  mcp.rs  mcp_tests.rs  mod.rs  shell.rs
tests/: config_migration_tests.rs  discord.rs  memory.rs  performance.rs  performance_benchmarks.rs
tests/integration/: agent_test.rs  channel_test.rs  mod.rs  security_test.rs
