[package]
name = "nekoclaw"
version = "0.1.0"
edition = "2021"
license = "CLOSED"
description = "Cat-Girl Family High-Performance Rust Assistant Core"
authors = ["Cat-Girl Family <miku@openclaw.cat>"]
repository = "https://github.com/Gengetau/nekoclaw"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Async Trait Support
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# HTTP
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Config
toml = "0.8"
dirs = "5.0"

# Security
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Obfuscation
obfstr = "0.4"

# Time Handling
chrono = "0.4"

# UUID
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3.31"

# Telegram Bot
teloxide = { version = "0.13", features = ["macros"] }
tokio-stream = "0.1"

[dev-dependencies]
# Benchmarking
criterion = "0.5"
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

# Testing
tokio-test = "0.4"
proptest = "1.4"

# Build dependencies - use gitcl (Git Command Line) instead of gix
[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "cargo", "rustc", "git", "gitcl"] }

# Binary optimization
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
