[package]
name = "nekoclaw-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.nekoclaw]
path = ".."

# Prevent this from interfering with the workspace library
[workspace]
members = ["."]

[[bin]]
name = "config_parser"
path = "fuzz_targets/config_parser.rs"

[[bin]]
name = "message_parser"
path = "fuzz_targets/message_parser.rs"
